--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "lodash": "^4.17.21",
     "react": "18.1.0",
     "react-native": "0.70.2"
   },
