--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "lodash": "^4.17.21",
     "react": "18.1.0",
+    "react-debounce-input": "^3.3.0",
     "react-native": "0.70.2"
   },
   "devDependencies": {
